# packages/trueforge-sdk/src/api/types/CatalogSandboxProviderSandboxTimeoutMs.ts
@@ -1,0 +1,10 @@
+// This file was auto-generated by Fern from our API Definition.
+
+export interface CatalogSandboxProviderSandboxTimeoutMs {
+    /** Default sandbox command exec timeout in milliseconds. */
+    execTimeoutMs: number;
+    /** Maximum lifetime of an E2B sandbox in milliseconds. */
+    sandboxTimeoutMs: number;
+    /** E2B sandbox provider. */
+    type: "e2b";
+}
