# packages/trueforge-sdk/src/api/types/SandboxProviderManifestSandboxTimeoutMs.ts
@@ -1,0 +1,13 @@
+// This file was auto-generated by Fern from our API Definition.
+
+import type * as TrueForge from "../index.js";
+
+export interface SandboxProviderManifestSandboxTimeoutMs {
+    auth: TrueForge.E2BSandboxProviderAuth;
+    /** Default sandbox command exec timeout in milliseconds. */
+    execTimeoutMs: number;
+    /** Maximum lifetime of an E2B sandbox in milliseconds. */
+    sandboxTimeoutMs: number;
+    /** E2B sandbox provider. */
+    type: "e2b";
+}
