# packages/trueforge-sdk/src/api/types/index.ts
@@ -26,6 +26,8 @@ export * from "./CatalogMcpServerType.js";
 export * from "./CatalogModel.js";
 export * from "./CatalogModelProvider.js";
 export * from "./CatalogSandboxProvider.js";
+export * from "./CatalogSandboxProviderAutoArchiveIntervalInMinutes.js";
+export * from "./CatalogSandboxProviderSandboxTimeoutMs.js";
 export * from "./CatalogSkill.js";
 export * from "./CatalogSkillType.js";
 export * from "./CatalogWellKnownModelProvider.js";
@@ -52,6 +54,7 @@ export * from "./DaytonaSandboxProviderAuth.js";
 export * from "./DeleteAgentResponse.js";
 export * from "./DeleteScheduleResponse.js";
 export * from "./DynamicSubAgentsConfig.js";
+export * from "./E2BSandboxProviderAuth.js";
 export * from "./ExtendedChunkDeltaToolCall.js";
 export * from "./FileContent.js";
 export * from "./FinishReason.js";
@@ -154,6 +157,8 @@ export * from "./SandboxCapability.js";
 export * from "./SandboxConfig.js";
 export * from "./SandboxCreatedEvent.js";
 export * from "./SandboxProviderManifest.js";
+export * from "./SandboxProviderManifestAutoArchiveIntervalInMinutes.js";
+export * from "./SandboxProviderManifestSandboxTimeoutMs.js";
 export * from "./Schedule.js";
 export * from "./ScheduleManifest.js";
 export * from "./ScheduleRun.js";
